added github/linkedin links

--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
 
         <footer class="footer mt-24 flex justify-center">
 
-          <div><img class="mr-1" src="./img/GitHub-Mark-120px-plus 1.png" alt=""></div>
-          <div><img class="ml-1" src="./img/Linkedin.png" alt=""></div>
-          <div><p class="">Website by Peter Brückner, 2021.</p></div>
+          <a href="https://github.com/Brucksta?tab=repositories" target="_blank"><div><img class="mr-1" src="./img/GitHub-Mark-120px-plus 1.png" alt=""></div></a>
+          <a href="https://www.linkedin.com/in/peter-bruckner-3b84a4206/" target="_blank"><div><img class="ml-1" src="./img/Linkedin.png" alt=""></div></a>
+          <div><p class="ml-5">Website by Peter Brückner, 2021.</p></div>
 </footer>
 
 </body>
